Updated Resume and Skills

--- a/index.html
+++ b/index.html
@@ -107,16 +107,18 @@
                     <h1>Let me introduce myself</h1>
                     <h2>Darshan Tripathi</h2>
                     <p class="intro-description">
-                        With a passion for coding and logic building, I have skill set which is
-                        necessary to deep dive into software world.My passion towards this tech field has continuously
-                        driven me to expand my knowledge, experience and skills. As a self motivated team
-                        player, I am ready to gain knowledge from the organization.
+                        🚀 Dynamic and goal-focused software engineer skilled in backend development, system design, and problem-solving.<br>
+                        🎓 Holds an M.Tech in CSE from IIIT Hyderabad & a B.Tech from BVM College, Anand.<br>
+                        💻 Works at Kore.ai, managing the backend of the Voice component in the XO-Contact Center using NodeJS, Redis,
+                        MongoDB & RabbitMQ.<br>
+                        🧠 Strong in C, C++, & DSA, with experience in Python, Java, Unity & C#, showcasing adaptability.<br>
+                        🔍 Passionate about software development, system architecture & solving complex problems in innovative environments.<br>
                     </p>
                     <address class="intro-about">
                         <span>Name:</span> Darshan Tripathi</span><br>
                         <span>Email:</span> <a
                             href="mailto:darshantripathi909@gmail.com">darshantripathi909@gmail.com</a><br>
-                        <span>Phone:</span> <a href="tel:+917016935975"> +91 7016935975/ +91 9904032167</a><br>
+                        <span>Phone:</span> <a href="tel:+917016935975"> +91 7016935975</a><br>
                     </address>
                 </div>
             </div>
@@ -150,8 +152,8 @@
                 </div>
                 <div class="item col-md-3">
                     <h4>M.Tech ,CSE</h4>
-                    <p>Pursuing(2021-2023)</p>
-                    <p class="card-text"> CPI - 7.71</p>
+                    <p>Apr,2023</p>
+                    <p class="card-text"> CPI - 7.8</p>
                     <h6 class="card-text">International Institute of Information Technology, Hyderabad (IIIT H)</h6>
                 </div>
             </div>
@@ -189,7 +191,22 @@
                 <img src="./images/sql.png" class="rounded-circle img-fluid skill-img">
                 <p class="skill-name">SQL</p>
             </div>
-            
+            <div class="col-md-3 col-sm-6">
+                <img src="./images/nodejs.png" class="rounded-circle img-fluid skill-img">
+                <p class="skill-name">Node.JS</p>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <img src="./images/mongodb.png" class="rounded-circle img-fluid skill-img">
+                <p class="skill-name">MongoDB</p>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <img src="./images/redis.png" class="rounded-circle img-fluid skill-img">
+                <p class="skill-name">Redis</p>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <img src="./images/rabbitmq.png" class="rounded-circle img-fluid skill-img">
+                <p class="skill-name">RabbitMQ</p>
+            </div>
             <div class="col-md-3 col-sm-6">
                 <img src="./images/python.png" class="img-fluid skill-img">
                 <p class="skill-name">Python</p>
